Fix help menu on mobile

--- a/ElastosBountyProgram/front-end/src/style/layout.scss
+++ b/ElastosBountyProgram/front-end/src/style/layout.scss
@@ -51,6 +51,12 @@
     .c_MenuItem.help {
       padding-right: 46px;
     }
+
+    @media only screen and (max-width: $mobile-width) {
+      .c_MenuItem.help {
+        display: none;
+      }
+    }
   }
 
   .c_MenuItem {
